fix close button spacing

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ header {
 }
 
 .btn-toggleShowAddTask {
-  width: 65px;
+  width: 70px;
   border: none;
   border-radius: 10px;
   color: white;
